# deepl-bot

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/db/: db.py  model.py  repo.py
src/deepl_bot/: deepl.py  handlers.py  run.py
